kubernetes/algod-relay/voimain-relay/fi-1-voimain-relay/s2-k1-fi-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: algo-relay-voimain
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relaynode-2
  namespace: algo-relay-voimain
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: algo-relay-voimain
  template:
    metadata:
      labels:
        app: algo-relay-voimain
        server: 00-htz-fi-hel-002
    spec:
      nodeName: s3-k1-fi.a-wallet.net
      hostname: 00-htz-fi-hel-002
      terminationGracePeriodSeconds: 3
      containers:
        - name: algo-relay-voimain
          image: scholtz2/algorand-relay-voimain:4.7.2-stable
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "8000Mi"
              cpu: "1000m"
            limits:
              memory: "16000Mi"
              cpu: "16000m"
          command:
            - /bin/bash
            - /app/run.sh
          ports:
            - containerPort: 5011
              protocol: TCP
            - containerPort: 9100
              protocol: TCP
            - containerPort: 28081
              protocol: TCP
          startupProbe:
            exec:
              command:
                - /bin/bash
                - /app/health.sh
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 1000
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - /app/health.sh
            initialDelaySeconds: 10
            timeoutSeconds: 10
            failureThreshold: 100
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - /app/health.sh
            initialDelaySeconds: 10
            timeoutSeconds: 10
            failureThreshold: 6
            terminationGracePeriodSeconds: 10
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: algo-voimain-vol-root-2
              mountPath: /app/data
            - name: algo-voimain-vol-net-2
              mountPath: /app/data/voimain-v1
      volumes:
        - name: algo-voimain-vol-root-2
          persistentVolumeClaim:
            claimName: algo-voimain-vol-root-2
        - name: algo-voimain-vol-net-2
          persistentVolumeClaim:
            claimName: algo-voimain-vol-net-2
