kubernetes/algod-relay/voimain-relay/fi-1-voimain-relay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voimain-5010-service
  namespace: algo-relay-voimain
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: algo-relay-voimain
  ports:
    - name: algorelay
      protocol: TCP
      appProtocol: http
      port: 5010
      nodePort: 5010
      targetPort: 5010
---
apiVersion: v1
kind: Service
metadata:
  name: voimain-9100-1-service
  namespace: algo-relay-voimain
spec:
  type: NodePort
  selector:
    server: 00-htz-fi-hel-001
  ports:
    - name: algorelay
      protocol: TCP
      appProtocol: http
      port: 9100
      nodePort: 49101
      targetPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: voimain-9100-2-service
  namespace: algo-relay-voimain
spec:
  type: NodePort
  selector:
    server: 00-htz-fi-hel-002
  ports:
    - name: algorelay
      protocol: TCP
      appProtocol: http
      port: 9100
      nodePort: 49102
      targetPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: voimain-28081-service
  namespace: algo-relay-voimain
spec:
  type: ClusterIP
  selector:
    app: algo-relay-voimain
  ports:
    - name: algoclient
      protocol: TCP
      appProtocol: http
      port: 28081
      targetPort: 28081
